src/test/deca/syntax/invalid/crochets3.deca
//Description
//    Vérifier la considération des crochets
//
//Résultats :
//    Erreur Lexicale:
//    Ligne 9

{
if(a==3){;
}
